--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 .terraform filter=lfs diff=lfs merge=lfs -text
+capstone-project/kubernetes/micro-service/.terraform/providers/registry.terraform.io/hashicorp/kubernetes/2.27.0/darwin_amd64/terraform-provider-kubernetes_v2.27.0_x5 filter=lfs diff=lfs merge=lfs -text
+capstone-project/kubernetes/micro-service/.terraform/providers/registry.terraform.io/hashicorp/aws/5.39.1/darwin_amd64/terraform-provider-aws_v5.39.1_x5 filter=lfs diff=lfs merge=lfs -text
